@startuml

title __USECASEINTERACTOR's Class Diagram__\n

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.AddBalSuggestion {
          + AddBalSuggestion()
          + addSuggestion()
          + addSuggestionByIdType()
      }
    }
  }
  

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.CreateCustomType {
          + CreateCustomType()
          + createType()
      }
    }
  }
  

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.DeclineBalSuggestion {
          + DeclineBalSuggestion()
          + declineSuggestion()
      }
    }
  }
  

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.GenerateBal {
          + GenerateBal()
          + generateBAL()
      }
    }
  }
  

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.GenerateBalSuggestions {
          {static} - AS_A : String
          + GenerateBalSuggestions()
          + generateSuggestions()
          # extractActorName()
          # extractScenarioContent()
          # extractScenarioName()
          # extractScenarioSteps()
          # generateAction()
          # generateObject()
      }
    }
  }
  

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.LoadBdl {
          + LoadBdl()
          + loadingBdl()
      }
    }
  }
  

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.ModifyBalSuggestion {
          + ModifyBalSuggestion()
          + addObject()
          + modifyActionName()
          + modifyActionType()
          + modifyActionTypeById()
          + modifyObjectName()
          + modifyObjectType()
          + modifyObjectTypeById()
          + removeObject()
      }
    }
  }
  

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.RemoveBdl {
          + RemoveBdl()
          + removeLoadedBdl()
      }
    }
  }
  

  namespace fourcats {
    namespace usecaseinteractor {
      class fourcats.usecaseinteractor.ShowTypes {
          + ShowTypes()
          + showTypes()
      }
    }
  }
  

  fourcats.usecaseinteractor.AddBalSuggestion .up.|> fourcats.port.AddBalSuggestionInputPort
  fourcats.usecaseinteractor.AddBalSuggestion o-- fourcats.port.AddBalSuggestionOutputPort : out
  fourcats.usecaseinteractor.AddBalSuggestion o-- fourcats.interfaceaccess.RepositoryAccess : repo
  fourcats.usecaseinteractor.CreateCustomType .up.|> fourcats.port.CreateCustomTypeInputPort
  fourcats.usecaseinteractor.CreateCustomType o-- fourcats.port.CreateCustomTypeOutputPort : out
  fourcats.usecaseinteractor.CreateCustomType o-- fourcats.interfaceaccess.RepositoryAccess : repo
  fourcats.usecaseinteractor.DeclineBalSuggestion .up.|> fourcats.port.DeclineBalSuggestionInputPort
  fourcats.usecaseinteractor.DeclineBalSuggestion o-- fourcats.port.DeclineBalSuggestionOutputPort : out
  fourcats.usecaseinteractor.DeclineBalSuggestion o-- fourcats.interfaceaccess.RepositoryAccess : repo
  fourcats.usecaseinteractor.GenerateBal .up.|> fourcats.port.GenerateBalInputPort
  fourcats.usecaseinteractor.GenerateBal o-- fourcats.interfaceaccess.BalAnalyzer : balAnalyzer
  fourcats.usecaseinteractor.GenerateBal o-- fourcats.port.GenerateBalOutputPort : out
  fourcats.usecaseinteractor.GenerateBal o-- fourcats.interfaceaccess.RepositoryAccess : repo
  fourcats.usecaseinteractor.GenerateBalSuggestions .up.|> fourcats.port.GenerateBalSuggestionsInputPort
  fourcats.usecaseinteractor.GenerateBalSuggestions o-- fourcats.port.GenerateBalSuggestionsOutputPort : out
  fourcats.usecaseinteractor.GenerateBalSuggestions o-- fourcats.interfaceaccess.RepositoryAccess : repo
  fourcats.usecaseinteractor.GenerateBalSuggestions o-- fourcats.interfaceaccess.TextAnalyzer : textAnalyzer
  fourcats.usecaseinteractor.LoadBdl .up.|> fourcats.port.LoadBdlInputPort
  fourcats.usecaseinteractor.LoadBdl o-- fourcats.port.LoadBdlOutputPort : out
  fourcats.usecaseinteractor.LoadBdl o-- fourcats.interfaceaccess.RepositoryAccess : repo
  fourcats.usecaseinteractor.ModifyBalSuggestion .up.|> fourcats.port.ModifyBalSuggestionInputPort
  fourcats.usecaseinteractor.ModifyBalSuggestion o-- fourcats.port.ModifyBalSuggestionOutputPort : out
  fourcats.usecaseinteractor.ModifyBalSuggestion o-- fourcats.interfaceaccess.RepositoryAccess : repo
  fourcats.usecaseinteractor.RemoveBdl .up.|> fourcats.port.RemoveBdlInputPort
  fourcats.usecaseinteractor.RemoveBdl o-- fourcats.port.RemoveBdlOutputPort : out
  fourcats.usecaseinteractor.RemoveBdl o-- fourcats.interfaceaccess.RepositoryAccess : repo
  fourcats.usecaseinteractor.ShowTypes .up.|> fourcats.port.ShowTypesInputPort
  fourcats.usecaseinteractor.ShowTypes o-- fourcats.port.ShowTypesOutputPort : out
  fourcats.usecaseinteractor.ShowTypes o-- fourcats.interfaceaccess.RepositoryAccess : repo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
